--- a/public/assetForDemo/tema_01/tailwind/output.css
+++ b/public/assetForDemo/tema_01/tailwind/output.css
@@ -642,10 +642,6 @@ section {
   margin-top: 0.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -704,10 +700,6 @@ section {
 
 .w-8 {
   width: 2rem;
-}
-
-.w-\[170px\] {
-  width: 170px;
 }
 
 .w-\[200px\] {
@@ -794,6 +786,11 @@ section {
   border-width: 4px;
 }
 
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -814,9 +811,9 @@ section {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-slate-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-200 {
@@ -912,6 +909,10 @@ section {
   font-size: 13px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[16px\] {
   font-size: 16px;
 }
@@ -942,6 +943,15 @@ section {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-orange-500 {
@@ -986,8 +996,6 @@ section h2.title {
 
 /* color */
 
-/* https://colorhunt.co/palette/ff9b9bffd6a5fffec4cbffa9 */
-
 .bg-primary {
   background-color: #FF9B9B;
 }
@@ -996,8 +1004,24 @@ section h2.title {
   background-color: #FFD6A5;
 }
 
-.bg-third {
-  background-color: #CBFFA9;
+.bg-success {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.bg-info {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.bg-danger {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.text-danger {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 /* end color */
